fix: fix project height on small device responsive

--- a/assets/project.css
+++ b/assets/project.css
@@ -155,7 +155,7 @@ input[type="radio"]:not(:checked) ~ .slides .slide {
     justify-content: center;
     align-items: center;
   }
-  
+
   .slides {
     position: absolute;
     top: 2vh; /* ajuste selon ce que tu veux */
@@ -172,5 +172,28 @@ input[type="radio"]:not(:checked) ~ .slides .slide {
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+  }
+
+  .thumbnails {
+    position: absolute;
+    top: 50%;
+    right: 5vw;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    z-index: 2;
+  }
+}
+
+@media (max-width: 380px)  {
+  .thumbnails {
+    position: absolute;
+    top: 70%;
+    bottom: 2vw;
+    right: 0;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    z-index: 2;
   }
 }
